--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,5 @@ steps:
 - script: |
     npm install
     npm run build
-    npm test a
+    npm test npm test -- --coverage
   displayName: 'npm install, build and test'
