--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
 
 - script: |
     npm install
+    npm run lint
     npm run build
     npm test npm test -- --coverage
-  displayName: 'npm install, build and test'
+  displayName: 'npm install, lint, build and test'
